--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,17 +3,64 @@
     無料で髪を切ろう
   </div>
 </div>
-<!-- <div class="row">
 
-</div>
 <div class="row">
-  <div class="col-md-4">
-    a
+  <div class="col-xs-12 text-center">
+    <div class="about-text">
+      <p class="">ヘアリアは、カットの練習をしたい美容師に向けた</p>
+      <p class="">カットモデル検索サービスです。</p>
+    </div>
   </div>
-  <div class="col-md-4">
-    b
+  <div class="hairiah-feature row">
+    <div class="feature-text text-center">
+      Hairiahの特徴
+    </div>
+    <div class="feature-outer row">
+      <div class="col-md-3 text-center col-md-offset-1-5">
+        <div class="feature-inner">
+          <div class="feature-inner-text">
+            簡単登録！
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-id-badge"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text">
+            条件に合うカットモデルを検索！
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-search"></i>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="feature-inner">
+          <div class="feature-inner-text">
+            あとはメッセージを送るだけ！
+          </div>
+          <div class="feature-icon">
+            <i class="fa fa-comments-o"></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col-md-4">
-    c
+</div>
+
+<div class="row">
+  <div class="register">
+    <div class="col-sm-4 col-sm-offset-2 col-md-3 col-md-offset-3 text-center home-register-btn">
+      <a href="/staff_signup_page", class="">
+        <div class="btn btn-danger btn-lg">美容師の方はこちら</div>
+      </a>
+    </div>
+    <div class="col-sm-4 col-md-3 text-center">
+      <a href="/signup_page", class="">
+        <div class="btn btn-primary btn-lg">カットモデル希望の方はこちら</div>
+      </a>
+    </div>
   </div>
-</div> -->
+</div>
