--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -112,3 +112,7 @@ input[type="checkbox"].my_check:checked + label::before{
     margin-left: 12.499999999%;
   }
 }
+
+.btn-lg {
+  font-size: 1em !important; 
+}
