--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,21 +6,22 @@
   </div>
 
   <div class="row">
-    <div class="col-xs-12 text-center">
+    <div class="text-center">
       <div class="about-text">
-        <p class="">ヘアリアは、カットの練習をしたい美容師に向けた</p>
-        <p class="">カットモデル検索サービスです。</p>
+        <p class="">ヘアリアは、無料で髪を切りたい人と</p>
+        <p class="">カットモデルを募集する美容師を</p>
+        <p class="">マッチングさせるサービスです。</p>
       </div>
     </div>
     <div class="hairiah-feature row">
       <div class="feature-text text-center">
-        Hairiahの特徴
+        Hairiahの簡単な利用方法
       </div>
       <div class="feature-outer row">
         <div class="col-md-3 text-center col-md-offset-1-5">
           <div class="feature-inner">
             <div class="feature-inner-text">
-              簡単登録！
+              1分で簡単登録！
             </div>
             <div class="feature-icon">
               <i class="fa fa-id-badge"></i>
@@ -30,7 +31,7 @@
         <div class="col-md-3 text-center">
           <div class="feature-inner">
             <div class="feature-inner-text">
-              条件に合うカットモデルを検索！
+              声がかかるor自分から応募！
             </div>
             <div class="feature-icon">
               <i class="fa fa-search"></i>
@@ -40,7 +41,7 @@
         <div class="col-md-3 text-center">
           <div class="feature-inner">
             <div class="feature-inner-text">
-              あとはメッセージを送るだけ！
+              あとはメッセージで日程調整！
             </div>
             <div class="feature-icon">
               <i class="fa fa-comments-o"></i>
@@ -54,14 +55,40 @@
   <div class="row">
     <div class="register">
       <div class="col-sm-4 col-sm-offset-2 col-md-3 col-md-offset-3 text-center home-register-btn">
-        <a href="/staff_signup_page", class="">
-          <div class="btn btn-danger btn-lg">美容師の方はこちら</div>
+        <a href="/signup_page", class="">
+          <div class="btn btn-primary btn-lg">会員登録する</div>
         </a>
       </div>
       <div class="col-sm-4 col-md-3 text-center">
-        <a href="/signup_page", class="">
-          <div class="btn btn-primary btn-lg">カットモデル希望の方はこちら</div>
+        <a href="/staff_usage", class="">
+          <div class="btn btn-default btn-lg">美容師の方はこちら</div>
         </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="hairiah-feature row hairiah-faq">
+    <div class="feature-text text-center">
+      Hairiahの特徴
+    </div>
+    <div class="feature-outer row row-eq-height">
+      <div class="col-md-3 text-center col-md-offset-1-5">
+        <div class="box26">
+          <span class="box-title">お金はかからないの？</span>
+          <p>登録料・利用料は一切かかりません。カットは原則無料ですが、カラー・パーマなどの料金は美容師とのご相談となります。また美容室までの交通費は自己負担となります。</p>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="box26">
+          <span class="box-title">なんで無料なの？</span>
+          <p>技術の向上のために、お金を頂かなくても切らせていただきたいという美容師は多数います。向上心のある美容師のためにぜひご協力ください。</p>
+        </div>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="box26">
+          <span class="box-title">変な髪形にされない？</span>
+          <p>あらかじめメッセージ機能で、希望の髪型を伝えることができます。合わないと感じたら別の美容師に連絡してみましょう。</p>
+        </div>
       </div>
     </div>
   </div>
