--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -79,6 +79,8 @@
   }
   .hairiah-feature {
     margin: 0 auto;
+    background-color: #e6e6e6;
+    padding-top: 20px;
     .feature-text {
       font-size: 1.3em;
       font-weight: bold;
@@ -107,4 +109,45 @@
       margin-bottom: 10px;
     }
   }
+
+  .faq-answer {
+    margin-top: 10px;
+  }
+  .faq-border {
+    border: 1px solid gray;
+    height: 200px;
+
+  }
+
+  .box26 {
+    position: relative;
+    margin: 2em 0;
+    border: solid 3px gray;
+    border-radius: 8px;
+    padding: 15px 10px;
+    @include mq-up(lg) {
+      height: 175px;
+    }
+}
+.box26 .box-title {
+    position: absolute;
+    display: inline-block;
+    top: -10px;
+    left: 10px;
+    padding: 0 9px;
+    line-height: 1;
+    font-size: 1.2em;
+    background: #e6e6e6;
+    font-weight: bold;
+}
+.box26 p {
+    margin: 0;
+    padding: auto 0;
+    font-size: 1em;
+}
+.home-detail-container {
+  @include mq-down {
+    padding: 0 20%;
+  }
+}
 }
