--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,18 +53,37 @@
   </div>
 
   <div class="row">
-    <div class="register">
-      <div class="col-sm-4 col-sm-offset-2 col-md-3 col-md-offset-3 text-center home-register-btn">
-        <a href="/signup_page", class="">
-          <div class="btn btn-primary btn-lg">会員登録する</div>
-        </a>
-      </div>
-      <div class="col-sm-4 col-md-3 text-center">
-        <a href="/staff_usage", class="">
-          <div class="btn btn-default btn-lg">美容師の方はこちら</div>
+    <div class="col-md-3 col-md-offset-1-5 text-center">
+      <div class="path-inner">
+        <div class="path-text-outer">
+          詳しい利用方法
+        </div>
+        <a href="/usage", class="path-btn">
+          <i class="fa fa-search-plus"></i>
         </a>
       </div>
     </div>
+    <div class="col-md-3 text-center">
+      <div class="path-inner">
+        <div class="path-text-outer">
+          さっそく会員登録
+        </div>
+        <a href="/signup_page", class="path-btn">
+          <i class="fa fa-id-badge"></i>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-3 text-center">
+      <div class="path-inner">
+        <div class="path-text-outer">
+          美容師の方
+        </div>
+        <a href="/staff_usage", class="path-btn">
+          <i class="fa fa-cut"></i>
+        </a>
+      </div>
+    </div>
+
   </div>
 
   <div class="hairiah-feature row hairiah-faq">
