--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -90,6 +90,7 @@
 
     .feature-outer {
       margin: 0 auto;
+      padding-bottom: 15px;
       .feature-inner {
         padding: 20px 0;
         .feature-inner-text {
@@ -103,22 +104,6 @@
       }
     }
   }
-  .register {
-    padding: 0 20px;
-    .home-register-btn {
-      margin-bottom: 10px;
-    }
-  }
-
-  .faq-answer {
-    margin-top: 10px;
-  }
-  .faq-border {
-    border: 1px solid gray;
-    height: 200px;
-
-  }
-
   .box26 {
     position: relative;
     margin: 2em 0;
@@ -128,8 +113,8 @@
     @include mq-up(lg) {
       height: 175px;
     }
-}
-.box26 .box-title {
+  }
+  .box26 .box-title {
     position: absolute;
     display: inline-block;
     top: -10px;
@@ -139,15 +124,51 @@
     font-size: 1.2em;
     background: #e6e6e6;
     font-weight: bold;
-}
-.box26 p {
+  }
+  .box26 p {
     margin: 0;
     padding: auto 0;
     font-size: 1em;
-}
-.home-detail-container {
-  @include mq-down {
-    padding: 0 20%;
   }
-}
+  .home-detail-container {
+    @include mq-down {
+      padding: 0 20%;
+    }
+  }
+  .path-inner {
+    padding: 20px 0;
+    .path-text-outer {
+      margin-bottom: 10px;
+    }
+    .path-btn {/*周りの凹み*/
+      display: inline-block;
+      text-decoration: none;
+      color: black;
+      width: 160px;
+      height: 160px;
+      line-height: 160px;
+      font-size: 80px;
+      border-radius: 50%;
+      text-align: center;
+      vertical-align: middle;
+      overflow: hidden;
+      font-weight: bold;
+      background-image: -webkit-linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+      background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
+      text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.66);
+      box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.5);
+      border-bottom: solid 2px #e6e6e6;
+    }
+    .path-btn .fa {
+      line-height: 60px;
+    }
+    .path-btn:active{
+      background-image: -webkit-linear-gradient(#efefef 0%, #d6d6d6 100%);
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
+      border-bottom: none;
+    }
+    .path-btn:hover {
+      opacity: 0.7;
+    }
+  }
 }
