--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="footer-inline">
       <div class="footer-item"><%= link_to "サービス概要", about_path %></div>
       <div class="footer-item"><%= link_to "お問い合わせ", contact_path %></div>
-      <div class="footer-item"><%= link_to "会社概要", "#" %></div>
+      <div class="footer-item"><%= link_to "###", "#" %></div>
     </div>
     <div class="footer-inline">
       <div class="footer-item"><a href="#">お知らせ</a></div>
