--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -135,6 +135,10 @@
       padding: 0 20%;
     }
   }
+  .register-text {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
   .path-inner {
     padding: 20px 0;
     .path-text-outer {
