--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -52,28 +52,29 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-3 col-md-offset-1-5 text-center">
-      <div class="path-inner">
-        <div class="path-text-outer">
-          詳しい利用方法
-        </div>
-        <a href="/usage", class="path-btn">
-          <i class="fa fa-search-plus"></i>
-        </a>
+  <div class="row text-center">
+    <div class="path-inner">
+      <div class="path-text-outer">
+        もっと詳しい利用方法
       </div>
+      <a href="/usage", class="path-btn">
+        <i class="fa fa-search-plus"></i>
+      </a>
     </div>
-    <div class="col-md-3 text-center">
+  </div>
+  <div class="row text-center">
+    <div class="register-text">さっそく会員登録</div>
+    <div class="col-xs-5 col-md-3 col-md-offset-3 col-xs-offset-1 text-center">
       <div class="path-inner">
         <div class="path-text-outer">
-          さっそく会員登録
+          髪を切ってほしい方
         </div>
         <a href="/signup_page", class="path-btn">
           <i class="fa fa-id-badge"></i>
         </a>
       </div>
     </div>
-    <div class="col-md-3 text-center">
+    <div class="col-xs-5 col-md-3 text-center">
       <div class="path-inner">
         <div class="path-text-outer">
           美容師の方
