--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
   </div>
   <div class="row text-center">
     <div class="register-text">さっそく会員登録</div>
-    <div class="col-xs-5 col-md-3 col-md-offset-3 col-xs-offset-1 text-center">
+    <div class="col-xs-6 col-md-3 col-md-offset-3 text-center">
       <div class="path-inner">
         <div class="path-text-outer">
           髪を切ってほしい方
@@ -74,7 +74,7 @@
         </a>
       </div>
     </div>
-    <div class="col-xs-5 col-md-3 text-center">
+    <div class="col-xs-6 col-md-3 text-center">
       <div class="path-inner">
         <div class="path-text-outer">
           美容師の方
