--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,9 +8,9 @@
   <div class="row">
     <div class="text-center">
       <div class="about-text">
-        <p class="">ヘアリアは、無料で髪を切りたい人と</p>
-        <p class="">カットモデルを募集する美容師を</p>
-        <p class="">マッチングさせるサービスです。</p>
+        <p>Hairiah(ヘアリア)は、無料で髪を切りたい人と</p>
+        <p>カットモデルを募集する美容師を</p>
+        <p>マッチングさせるサービスです。</p>
       </div>
     </div>
     <div class="hairiah-feature row">
