--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,16 +7,21 @@
 
   <div class="row">
     <div class="text-center">
-      <div class="about-text">
-        <p>Hairiah(ヘアリア)は、無料で髪を切りたい人と</p>
+      <div class="about-text visible-sp">
+        <p>Hairiah(ヘアリア)は、</p>
+        <p>無料で髪を切りたい人と</p>
         <p>カットモデルを募集する美容師を</p>
         <p>マッチングさせるサービスです。</p>
       </div>
-    </div>
-    <div class="hairiah-feature row">
-      <div class="feature-text text-center">
-        Hairiahの簡単な利用方法
+      <div class="about-text hidden-sp">
+        <p>Hairiah(ヘアリア)は、無料で髪を切りたい人と</p>
+        <p>カットモデルを募集する美容師をマッチングさせるサービスです。</p>
       </div>
+    </div>
+    <div class="hairiah-feature row text-center">
+      <span class="feature-text arrow-border">
+        Hairiahの簡単な利用方法
+      </span>
       <div class="feature-outer row">
         <div class="col-md-3 text-center col-md-offset-1-5">
           <div class="feature-inner">
@@ -63,34 +68,35 @@
     </div>
   </div>
   <div class="row text-center">
-    <div class="register-text">さっそく会員登録</div>
-    <div class="col-xs-6 col-md-3 col-md-offset-3 text-center">
-      <div class="path-inner">
-        <div class="path-text-outer">
-          髪を切ってほしい方
+    <span class="register-text arrow-border">さっそく会員登録</span>
+    <div class="row">
+      <div class="col-xs-6 col-md-3 col-md-offset-3 text-center">
+        <div class="path-inner">
+          <div class="path-text-outer">
+            髪を切ってほしい方
+          </div>
+          <a href="/signup_page", class="path-btn">
+            <i class="fa fa-id-badge"></i>
+          </a>
         </div>
-        <a href="/signup_page", class="path-btn">
-          <i class="fa fa-id-badge"></i>
-        </a>
+      </div>
+      <div class="col-xs-6 col-md-3 text-center">
+        <div class="path-inner">
+          <div class="path-text-outer">
+            美容師の方
+          </div>
+          <a href="/staff_usage", class="path-btn">
+            <i class="fa fa-cut"></i>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="col-xs-6 col-md-3 text-center">
-      <div class="path-inner">
-        <div class="path-text-outer">
-          美容師の方
-        </div>
-        <a href="/staff_usage", class="path-btn">
-          <i class="fa fa-cut"></i>
-        </a>
-      </div>
-    </div>
-
   </div>
 
-  <div class="hairiah-feature row hairiah-faq">
-    <div class="feature-text text-center">
+  <div class="hairiah-feature row hairiah-faq text-center">
+    <span class="feature-text arrow-border">
       Hairiahの特徴
-    </div>
+    </span>
     <div class="feature-outer row row-eq-height">
       <div class="col-md-3 text-center col-md-offset-1-5">
         <div class="box26">
