--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -59,8 +59,10 @@
 
   <div class="row text-center">
     <div class="path-inner">
-      <div class="path-text-outer">
-        もっと詳しい利用方法
+      <div class="text-center detail-text">
+        <span class="arrow-border arrow-border-right">
+          もっと詳しい利用方法
+        </span>
       </div>
       <a href="/usage", class="path-btn">
         <i class="fa fa-search-plus"></i>
