--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -61,7 +61,7 @@
     <div class="path-inner">
       <div class="text-center detail-text">
         <span class="arrow-border arrow-border-right">
-          もっと詳しい利用方法
+          詳しい利用方法
         </span>
       </div>
       <a href="/usage", class="path-btn">
@@ -102,19 +102,19 @@
     <div class="feature-outer row row-eq-height">
       <div class="col-md-3 text-center col-md-offset-1-5">
         <div class="box26">
-          <span class="box-title">お金はかからないの？</span>
+          <span class="box-title"><i class="fa fa-circle circle-red"></i> お金はかからないの？</span>
           <p>登録料・利用料は一切かかりません。カットは原則無料ですが、カラー・パーマなどの料金は美容師とのご相談となります。また美容室までの交通費は自己負担となります。</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
         <div class="box26">
-          <span class="box-title">なんで無料なの？</span>
+          <span class="box-title"><i class="fa fa-circle circle-red"></i> なんで無料なの？</span>
           <p>技術の向上のために、お金を頂かなくても切らせていただきたいという美容師は多数います。向上心のある美容師のためにぜひご協力ください。</p>
         </div>
       </div>
       <div class="col-md-3 text-center">
         <div class="box26">
-          <span class="box-title">変な髪形にされない？</span>
+          <span class="box-title"><i class="fa fa-circle circle-red"></i> 変な髪形にされない？</span>
           <p>あらかじめメッセージ機能で、希望の髪型を伝えることができます。合わないと感じたら別の美容師に連絡してみましょう。</p>
         </div>
       </div>
