--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -117,7 +117,7 @@
   .box26 .box-title {
     position: absolute;
     display: inline-block;
-    top: -10px;
+    top: -16px;
     left: 10px;
     padding: 0 9px;
     line-height: 1;
@@ -219,6 +219,9 @@
   .detail-text {
     font-size: 1.3em;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+  }
+  .circle-red {
+    color: #db7093;
   }
 }
