--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -105,7 +105,9 @@ header {
     z-index: 25;
   }
   .header-item-hm {
-    margin-bottom: 15px;
+    padding: 12px 0 12px 0;
+    display: block;
+    font-size: 1.1em;
   }
 }
 
@@ -113,4 +115,16 @@ header {
   position: fixed;
   width: 100%;
   height: 100%;
+}
+
+.header-inner-border {
+  border-bottom: 1px solid rgb(235, 235, 235);
+  margin: 10px 0 10px 0;
+}
+
+.hamburger-icon {
+  position: absolute;
+  right: 20px;
+  font-size: 1.6em !important;
+  padding-top: 0;
 }
