--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -6,5 +6,7 @@
   <div class="form-group">
     <textarea class="form-control" type="text" data-behavior="chat_speaker"></textarea>
   </div>
-  <button class='chat_submit btn-primary' type="button">送信</button>
+  <div class="message-btn">
+    <button class='chat_submit btn btn-primary' type="button">送信</button>
+  </div>
 </form>
