--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -5,7 +5,7 @@
       <strong id="following" class="stat">
         <%= @user.following.count %>
       </strong>
-      フォロー
+      フォロー中
     </a>
   </div>
   <div class="stats-inner col-md-4">
