--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -51,7 +51,7 @@ $breakpoint-down: (
 //   -webkit-appearance : none;
 //   -webkit-tap-highlight-color : rgba(0,0,0,0);
 // }
-input[type="checkbox"].my_check {
+  input[type="checkbox"].my_check {
     display: none;
 }
 input[type="checkbox"].my_check + label {
@@ -96,6 +96,51 @@ input[type="checkbox"].my_check:checked + label::before{
     color: #15c !important;
 }
 
+/* Radio ---------------------------------------------------*/
+input[type="radio"] {
+    display: none;
+
+    & + label {
+        display: block;
+        cursor: pointer;
+        margin: 5px;
+
+        /*通常時の見た目*/
+        &::before {
+            width: 30px;
+            height: 30px;
+            display: inline-block;
+            content: "";
+            border-radius: 17px;
+            vertical-align: middle;
+            border: 2px solid #dddddd;
+            background-color: #f0f0f0;
+            margin: -2px 5px 0 0;
+            -webkit-transition: .1s;
+                    transition: .1s;
+        }
+        /*hover時の見た目*/
+        &:hover {
+            color: #6495ed;
+            &::before {
+                background-color: #fff;
+            }
+        }
+    }
+    /*checked時の見た目*/
+    &:checked + label {
+        color: #6495ed;
+        cursor: default;
+
+        &::before {
+            border-color: #6495ed !important;
+            background-color: #6495ed !important;
+            box-shadow: inset 0 0 0 7px #fff;
+        }
+    }
+}
+
+
 .checkbox-inline-block {
   display: inline-block;
   padding-right: 15px;
@@ -114,5 +159,5 @@ input[type="checkbox"].my_check:checked + label::before{
 }
 
 .btn-lg {
-  font-size: 1em !important; 
+  font-size: 1em !important;
 }
