--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,6 +16,16 @@
     height: 300px;
   }
 }
+.fa-star {
+  color: #ffcc66;
+}
+.last-login {
+  font-size: 0.9em;
+}
+
+.followers-count {
+  margin-left: 2.5px;
+}
 
 // user-show
 .carousel-thumbnail {
