--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,7 +3,7 @@
   <div class="<%= message.id %>" id="message_sender"><%= user.name %></div>
   <div class="<%= message.id %>" id="message_content"><%= simple_format(h(message.content)) %></div>
   <div class="<%= message.id %>" id="message_date"><%= message.created_at.strftime('%m/%d %H:%M') %></div>
-  <script type="text/javascript">
+  <script>
     var from_id = <%= message.from_id %>;
     var current_user_id = $('.message').data('session');
     if(from_id == current_user_id){
