--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,59 @@
 <% provide(:title, @user.name) %>
 
 <div class="row">
-  <aside class="col-xs-4">
-    <section class="stats">
-      <%= render 'shared/stats' %>
-    </section>
-    <%= render 'follow_form' if logged_in? %>
-  </aside>
+  <div class="col-md-4">
+    <div class="user-edit-image col-xs-4 col-md-12">
+      <% if !current_user?(@user) %>
+          <% if @user.image.present?  %>
+            <%= cl_image_tag(@user.image_url, width: 300, height: 200, crop: :fill, class: 'user-image') %>
+          <% else %>
+            <%= image_tag '/no-image.png', class: "no-image"%>
+          <% end %>
+      <% end %>
+      <div><%= @user.name %></div>
+      最終ログイン<%= @user.last_accessed_at %>
+    </div>
+    <div class="col-xs-7 col-xs-offset-1 col-md-12 col-md-offset-0">
+      <div class=""><%= @user.name %></div>
+      <div class=""><%= @user.prefecture.name %> <%= @user.area.name %></div>
+      <% if @user.experience.present? %>
+        <div>美容師歴</div>
+        <%= @user.experience %>
+      <% elsif @user.qualification.present? %>
+        <div>美容師免許取得時期</div>
+        <%= @user.qualification %>
+      <% end %>
+
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+      <%= render 'follow_form' if logged_in? %>
+    </div>
+  </div>
+  <div class="col-xs-12 col-md-8">
+    <% if !current_user?(@user) && logged_in? && ((@user.staff == false && current_user.staff == true) || (current_user.staff == false && @user.staff == true))  %>
+      <section class="message_box">
+        <div id="messages">
+          <%= render @messages %>
+        </div>
+      </section>
+      <script type="text/javascript">
+        var height = 0;
+        $("div.message").each( function() {
+          height += ($(this).height());
+        });
+        $('section.message_box').scrollTop(height);
+      </script>
+      <div class="message_form">
+       <%= render 'messages/message_form',
+         {from_user: current_user, to_user: @user, room_id: @room_id} %>
+      </div>
+    </div>
+  <% end %>
+</div>
+<div class="row">
   <% if current_user?(@user) %>
-    <div class="col-xs-9">
+    <div class="col-md-6">
       <div class="user-info-detail">
         <div>トーク履歴</div>
         <div>
@@ -33,30 +78,62 @@
         </div>
       </div>
     </div>
-  <% end %>
-</div>
-
-<div class="row">
-  <div class="col-md-4">
-    <% if !current_user?(@user) && logged_in? && ((@user.staff == false && current_user.staff == true) || (current_user.staff == false && @user.staff == true))  %>
-      <section class="message_box">
-        <div id="messages">
-          <%= render @messages %>
+    <% if @user.staff? %>
+      <div class="col-md-6">
+        <div class="user-info-detail">
+          <div>投稿履歴</div>
+          <div>
+            <div>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">投稿タイトル</th>
+                    <th scope="col">投稿日</th>
+                    <th scope="col">応募数</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @user.microposts.each do |post| %>
+                    <tr>
+                      <td><%= link_to post.title, micropost_path(post) %></td>
+                      <td><%= post.created_at_to_date %></td>
+                      <td><%= post.applies.count %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
-      </section>
-      <script type="text/javascript">
-        var height = 0;
-        $("div.message").each( function() {
-          height += ($(this).height());
-        });
-        $('section.message_box').scrollTop(height);
-      </script>
-      <div class="message_form">
-       <%= render 'messages/message_form',
-         {from_user: current_user, to_user: @user, room_id: @room_id} %>
       </div>
-    </div>
-
+    <% elsif !@user.staff? %>
+      <div class="col-md-6">
+        <div class="user-info-detail">
+          <div>応募履歴</div>
+          <div>
+            <div>
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col-xs-7">応募投稿のタイトル</th>
+                    <th scope="col-xs-2">投稿者</th>
+                    <th scope="col-xs-3">応募日</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% @user.applies.each do |apply| %>
+                    <tr>
+                      <td><%= link_to apply.micropost.title, micropost_path(apply.micropost) %></td>
+                      <td><%= link_to apply.micropost.user.name, user_path(apply.micropost.user) %></td>
+                      <td><%= apply.created_at_to_date %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
   <% end %>
-
 </div>
