--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -9,9 +9,12 @@ div.message_form {
 #message_content {
   font-size: 1.2em;
   padding: 10px 0;
-  span {
+  div {
     background-color: gainsboro;
     padding: 5px;
+    display: inline-block;
+    text-align: left;
+    
   }
 }
 
