--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,14 +1,14 @@
 <div class="message" data-session="<%= session[:user_id] %>">
   <% user = User.find_by(id: message.from_id) %>
   <div class="<%= message.id %>" id="message_sender"><%= user.name %></div>
-  <div class="<%= message.id %>" id="message_content"><%= simple_format(h(message.content)) %></div>
+  <div class="<%= message.id %>" id="message_content"><%= simple_format(h(message.content), {}, wrapper_tag: "div") %></div>
   <div class="<%= message.id %>" id="message_date"><%= message.created_at.strftime('%m/%d %H:%M') %></div>
   <script>
     var from_id = <%= message.from_id %>;
     var current_user_id = $('.message').data('session');
-    if(from_id == current_user_id){
+    if(from_id == current_user_id) {
       $('div.' + <%= message.id %>).css('text-align', 'right');
-    }else{
+    } else {
       $('div.' + <%= message.id %>).css('text-align', 'left');
     }
   </script>
