message_box_design

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -148,6 +148,10 @@ input[type="radio"] {
   margin-bottom: 10px;
 }
 
+.input-lg {
+  font-size: inherit;
+}
+
 .fix-input-lg {
   line-height: 1.33333333 !important;
 }
