--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -8,16 +8,20 @@ div.message_form {
 
 #message_content {
   font-size: 1.2em;
-  padding: 10px 0;
+  padding: 5px 0;
   div {
     background-color: gainsboro;
     padding: 5px;
     display: inline-block;
     text-align: left;
-    
+    border-radius: 5px;
   }
 }
 
 .message {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.message_box {
+  margin-top: 10px;
 }
